<resources>
    <string name="app_name">Draw4Friends</string>
    <string name="friends">Friends</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Enter username</string>
    <string name="pw">Enter password</string>
    <string name="confirm_pw">Confirm password</string>
    <string name="no_account"><u>No account? Register now!</u></string>
    <string name="register_failed">Failed to register. Your username may have been taken already.</string>
    <string name="login_failed">Failed to login. Please check for typos.</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="challenge_friend">Challenge a friend!</string>
    <string name="active_challenges">Active challenges</string>
    <string name="turn_draw">It\'s your turn to <b>draw</b>.</string>
    <string name="turn_guess">It\'s your turn to <b>guess</b>.</string>
    <string name="no_friends">You currently have no friends added. Add a friend by clicking the people icon on the toolbar.</string>
    <string name="pick_opp">Pick opponent</string>
    <string name="search_friend">Search for a friend by looking for their username.</string>
    <string name="delete_friend">Delete friend</string>
    <string name="delete_friend_sure">Are you sure you want to delete this friend: </string>
    <string name="cancel_drawing">Cancel drawing</string>
    <string name="cancel_drawing_msg">If you just started a new challenge the challenge will not be created.</string>
    <string name="enter_word">Word to draw</string>
    <string name="enter_word_hint">Enter the word you want to draw.</string>
    <string name="word">Word</string>
    <string name="guess_activity">Guess drawing</string>
    <string name="pause"><b>PAUSE</b></string>
    <string name="guess_hint">Your guess</string>
    <string name="start_timer">Start timer</string>
    <string name="start_timer_msg">Press ok to start a timer and watch the painting. You got 60 seconds to watch the drawing and another 30 seconds afterwards to guess the right answer.</string>
    <string name="send_guess">Send guess</string>
    <string name="send_title">Answer</string>
    <string name="send_answer_msg">Are you sure you want to submit your answer?</string>
    <string name="answer_right_title">Correct answer</string>
    <string name="answer_wrong_title">Wrong answer</string>
    <string name="answer_right_msg">Your answer was correct. You receive </string>
    <string name="answer_wrong_msg">Unfortunately your answer is not correct.</string>
    <string name="stats_activity">Scores</string>

    <!-- Keys -->
    <string name="login_token">token</string>
    <string name="user_obj">user_obj</string>
    <string name="challenge_obj">challenge_obj</string>
    <string name="friend">Search for name of a friend</string>
    <string name="drawImage">Draw Image</string>
    <string name="start_challenge">Start challenge</string>

    <string name="current_color">Selected color: </string>
    <string name="black">black</string>
    <string name="white">white</string>
    <string name="blue">blue</string>
    <string name="red">red</string>
    <string name="yellow">yellow</string>
    <string name="green">green</string>
    <string name="brown">brown</string>
    <string name="pink">pink</string>
    <string name="challengeStarted">Challenge successfully started.</string>
    <string name="startChallenge">Start Challenge</string>
    <string name="startChallengeMsg">Is your painting finished?</string>
    <string name="startChallengeSubmit">Start Challenge!</string>


</resources>
