<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:textColor="#fff"
        android:id="@+id/loginHeadline"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_black_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:tint="#fff"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:id="@+id/loginEmailEditText"
            android:layout_gravity="center_vertical"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:backgroundTint="#fff"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock_black_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:tint="#fff"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/pw"
            android:id="@+id/loginPwEditText"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:backgroundTint="#fff"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/registerLayout"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock_black_24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:tint="#fff"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_pw"
            android:id="@+id/loginPwRepeatEditText"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:backgroundTint="#fff"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:id="@+id/noAccountView"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="#fff"
        android:clickable="true"
        android:focusable="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:textColor="#fff"/>

</LinearLayout>